[gd_scene load_steps=2 format=3 uid="uid://bs3cejai31h0v"]

[ext_resource type="Script" path="res://scenes/create-godot-version-dialog/create-godot-version-dialog.gd" id="1_c7nj4"]

[node name="CreateGodotVersionDialog" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)
script = ExtResource("1_c7nj4")

[node name="NewProjectDialog" type="ColorRect" parent="."]
custom_minimum_size = Vector2(860, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -60.0
offset_right = 400.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="MarginContainer" type="MarginContainer" parent="NewProjectDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NewProjectDialog/MarginContainer"]
layout_mode = 2

[node name="ProjectPathHBoxContainer2" type="HBoxContainer" parent="NewProjectDialog/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GodotPathLabel" type="Label" parent="NewProjectDialog/MarginContainer/VBoxContainer/ProjectPathHBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Godot Path:"
horizontal_alignment = 2

[node name="GodotPathLineEdit" type="LineEdit" parent="NewProjectDialog/MarginContainer/VBoxContainer/ProjectPathHBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Path to the project folder."
caret_blink = true
caret_blink_interval = 0.5

[node name="SelectGodotPathButton" type="Button" parent="NewProjectDialog/MarginContainer/VBoxContainer/ProjectPathHBoxContainer2"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Select Path"

[node name="HBoxContainer" type="HBoxContainer" parent="NewProjectDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GodotVersionLabel" type="Label" parent="NewProjectDialog/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Godot Version Name:"
horizontal_alignment = 2

[node name="GodotVersionLineEdit" type="LineEdit" parent="NewProjectDialog/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Must result in a valid file name."
caret_blink = true
caret_blink_interval = 0.5

[node name="SelectGodotPathButton" type="Button" parent="NewProjectDialog/MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Select Path"

[node name="UseFileVersionCheckBox" type="CheckBox" parent="NewProjectDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
button_pressed = true
text = "Auto Generate Name"

[node name="MarginContainer" type="MarginContainer" parent="NewProjectDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="NewProjectDialog/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="NewProjectDialog/MarginContainer/VBoxContainer/MarginContainer/ButtonHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "CANCEL"

[node name="SaveButton" type="Button" parent="NewProjectDialog/MarginContainer/VBoxContainer/MarginContainer/ButtonHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "SAVE"

[node name="SelectGodotExeFileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(200, 200)
size = Vector2i(600, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.exe")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
position = Vector2i(300, 150)
size = Vector2i(500, 200)
dialog_text = "The path to your godot binary doesn't appear to be a stable version. We normally expect to see \"Godot_\" and \"-stable\" in the file name. This program launches godot using the path you provide. You might be using a beta version which is ok. Just calling it out to make sure you're aware."
dialog_autowrap = true

[connection signal="pressed" from="NewProjectDialog/MarginContainer/VBoxContainer/ProjectPathHBoxContainer2/SelectGodotPathButton" to="." method="_on_select_godot_path_button_pressed"]
[connection signal="pressed" from="NewProjectDialog/MarginContainer/VBoxContainer/UseFileVersionCheckBox" to="." method="_on_use_file_version_check_box_pressed"]
[connection signal="pressed" from="NewProjectDialog/MarginContainer/VBoxContainer/MarginContainer/ButtonHBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="NewProjectDialog/MarginContainer/VBoxContainer/MarginContainer/ButtonHBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="SelectGodotExeFileDialog" to="." method="_on_file_dialog_file_selected"]
